# ufa-scraper

./: README.md  pyproject.toml  requirements.txt
src/ufa_scraper/: main.py
src/ufa_scraper/clients/: http_client.py
src/ufa_scraper/config/: settings.py
src/ufa_scraper/pages/: games_page.py  players_page.py  stats_page.py
src/ufa_scraper/parsers/: games_parser.py  players_parser.py  stats_parser.py
src/ufa_scraper/pipelines/: clean.py  storage.py
src/ufa_scraper/utils/: logging_setup.py
tests/: test_pages.py  test_parsers.py
