[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ufa_scraper"
version = "0.1.0"
description = "A scraper for Ultimate Frisbee Association stats"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kenji Her" }
]

# Project dependencies
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "python-dotenv",
    "pydantic-settings",
    "pymongo"
]

# Optional dev dependencies
[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
